# TextCutter

./: .gitignore  CMakeLists.txt  README.md
source/: CMakeLists.txt  main.cpp
source/gui/: main_window.cpp  main_window.h
source/libcutter/: CMakeLists.txt
source/libcutter/cutter/: cut_text.cpp  cut_text.h
source/textcutter/: CMakeLists.txt  main.cpp  translations.qrc
source/textcutter-common/: CMakeLists.txt  translations_common.qrc
source/textcutter-common/common/: text_cutter.cpp  text_cutter.h
source/textcutter-gui/: CMakeLists.txt  main.cpp  translations.qrc
source/textcutter-gui/gui/: main_window.cpp  main_window.h
translations/: textcutter-common_de.ts  textcutter-common_en.ts  textcutter-gui_de.ts  textcutter-gui_en.ts  textcutter_de.ts  textcutter_en.ts
